@@ -2,7 +2,6 @@
   - Big integers
   - Fractions
   - Complex numbers (as pairs of two numbers of same type)
-* caaadadr and such weird functions (I've no idea how to implement this)
 * IO
 * Documentation for library API
 * Documented semantics of locales
